# Ai_n_DS

./: README.md  hello.txt  ~$🚀 AI.docx  🚀 AI.docx
Fast_Api/: main.py  pyproject.toml
Fast_Api/Assignment.py/: form.py  form2.py  pyproject.toml
part 1/: q10.py  q11.py  q12.py  q13.py  q15.py  q16.py  q17.py  q18.py  q19.py  q2.py  q20.py  q4.py  q5.py  q6.py  q8.py  q9.py
part 2/: q10.py  q11.py  q12.py  q13.py  q14.py  q15.py  q16.py  q17.py  q18.py  q19.py  q2.py  q20.py  q3.py  q6.py  q7.py  q9.py
