[project]
name = "assignment"
version = "0.1.0"
description = "university form  Assignment"
authors = [
    {name = "Muhammad Bahawal",email = "167578686+MuhammadBahawal@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.115.7,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
